# hdf5_to_arrow

./: CONTRIBUTING.rst  LICENSE  README.md  SETUP.md  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md
docs/examples/: ICESat2-and-GEDI.ipynb
src/hdf5_to_arrow/: __init__.py  hdf5_to_arrow.py
tests/: test_hdf5_to_arrow.py
